--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,6 +131,13 @@ input:-webkit-autofill:focus {
     border-radius: 50%; /* Opcional: redondeado para destacar */
 }
 
+.hide-input {
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  pointer-events: none;
+}
+
 /* Fondo activo para días seleccionados */
 .datepicker .day.active {
     background-color: #3f6791; /* Azul grisáceo */
@@ -142,6 +149,19 @@ input:-webkit-autofill:focus {
 .datepicker .day.active:hover {
     background-color: #495057; /* Gris oscuro */
     color: #3f6791;
+}
+
+.datepicker table{
+  font-size: 16px;
+}
+
+.datepicker table th,
+.datepicker table td {
+  padding: 10px 12px;
+}
+
+.datepicker {
+  min-width: 280px;
 }
 
 /* datepicker btn */
