--- a/core/sh/templates/movements/create.html
+++ b/core/sh/templates/movements/create.html
@@ -138,6 +138,30 @@
                     {{ form.ip }}
                   </div>
                 </div>
+                <div class="col-4">
+                  <div class="form-group">
+                    <label for="id_ip">Rack</label>
+                    {{ form.rack }}
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="form-group">
+                    <label for="id_ip">Posicion Rack</label>
+                    {{ form.switch_rack_pos }}
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="form-group">
+                    <label for="id_ip">Número de Serie</label>
+                    {{ form.switch_serial_n }}
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="form-group">
+                    <label for="id_ip">Número de Serie</label>
+                    {{ form.device_serial_n }}
+                  </div>
+                </div>
               </div>
             </div>
           </div>
