--- a/core/sh/templates/switch/list.html
+++ b/core/sh/templates/switch/list.html
@@ -10,12 +10,14 @@
 {% block columns %}
 
   <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 15%;">Marca</th>
-  <th scope="col" style="width: 15%;">Nro. de Serie</th>
+  <th scope="col" style="width: 10%;">Marca</th>
+  <th scope="col" style="width: 10%;">Nro. de Serie</th>
   <th scope="col" style="width: 5%;">Cantidad de puertos</th>
-  <th scope="col" style="width: 15%;">Oficina</th>
-  <th scope="col" style="width: 15%;">Rack</th>
-  <th scope="col" style="width: 15%;">Posicion en el Rack</th>
+  <th scope="col" style="width: 15%;">Dirección IP</th>
+  <th scope="col" style="width: 10%;">Modelo</th>
+  <th scope="col" style="width: 10%;">Oficina</th>
+  <th scope="col" style="width: 10%;">Rack</th>
+  <th scope="col" style="width: 10%;">Posicion en el Rack</th>
   <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
