--- a/core/sh/templates/movements/list.html
+++ b/core/sh/templates/movements/list.html
@@ -10,8 +10,9 @@
 {% block columns %}
 
   <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 20%;">Dispositivo</th>
-  <th scope="col" style="width: 10%;">Usuario/Oficina</th>
+  <th scope="col" style="width: 10%;">Dispositivo</th>
+  <th scope="col" style="width: 10%;">Oficina</th>
+  <th scope="col" style="width: 10%;">Usuario</th>
   <th scope="col" style="width: 10%;">Movimiento</th>
   <th scope="col" style="width: 10%;">Tecnico</th>
   <th scope="col" style="width: 10%;">Fecha</th>
