--- a/core/sh/templates/movements/create.html
+++ b/core/sh/templates/movements/create.html
@@ -136,13 +136,13 @@
                         <div class="col-6">
                           <div class="form-group">
                             <label for="id_brand">Marca</label>
-                            {{ form.brand }}
+                            {{ form.d_brand }}
                           </div>
                         </div>
                         <div class="col-6">
                           <div class="form-group">
                             <label for="id_ip">Ip</label>
-                            {{ form.ip }}
+                            {{ form.d_ip }}
                           </div>
                         </div>
                         <div class="col-6">
@@ -174,10 +174,10 @@
               <h3 class="card-title">Switchs</h3>
             </div>
             <div class="card-body">
-              <button id="toggle-device-filters" class="btn {{filter_btn_color}} mb-4" type="button">
+              <button id="toggle-switch-filters" class="btn {{filter_btn_color}} mb-4" type="button">
                 Filtrar Switchs <i class="fa fa-filter"></i>
               </button>
-              <div id="filter-device-cards" class="d-none">
+              <div id="filter-switch-cards" class="d-none">
                 <div class="row">
                   <div class="container">
                     <div class="card text-white bg-secondary mt-1">
@@ -188,13 +188,13 @@
                         <div class="col-4">
                           <div class="form-group">
                             <label for="id_brand">Marca</label>
-                            {{ form.brand }}
+                            {{ form.s_brand }}
                           </div>
                         </div>
                         <div class="col-4">
                           <div class="form-group">
                             <label for="id_ip">Ip</label>
-                            {{ form.ip }}
+                            {{ form.s_ip }}
                           </div>
                         </div>
                         <div class="col-4">
