--- a/core/sh/templates/movements/create.html
+++ b/core/sh/templates/movements/create.html
@@ -127,10 +127,16 @@
                         Filtrar Dispositivos
                       </div>
                       <div class="card-body row">
+                        <div class="col-12">
+                          <div class="form-group">
+                            <label for="id_d_office">Oficina</label>
+                            {{ form.d_office }}
+                          </div>
+                        </div>
                         <div class="col-6">
                           <div class="form-group">
                             <label for="id_dev_type">Tipo de Dispositivo</label>
-                            {{ form.dev_type }}
+                            {{ form.device_dev_type }}
                           </div>
                         </div>
                         <div class="col-6">
