--- a/core/sh/templates/patch_port/create.html
+++ b/core/sh/templates/patch_port/create.html
@@ -44,5 +44,6 @@
 {% endblock form %}
 
 {% block form_scripts %}
+<script src="{% static 'js/filters.js' %}"></script>
   <script src="{% static 'patch_port/js/form.js' %}"></script>
 {% endblock form_scripts %}
