--- a/templates/home.html
+++ b/templates/home.html
@@ -41,6 +41,8 @@
   <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
   <!-- Js Functions-->
   <script src="{% static 'js/functions.js' %}"></script>
+  <!-- Bootstrap -->
+  <script src="{% static '/static/lib/adminlte_3.2.0/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   {% block extra_js %}
 
   {% endblock extra_js %}
