--- a/core/sh/templates/location/create.html
+++ b/core/sh/templates/location/create.html
@@ -11,7 +11,8 @@
 
 {% block form %}
 <div class="form-group">
-  <label for="province">Provincia:</label>
+    <label for="province">Provincia: </label>
+    <button type="button" class="btn btn-sm btn-outline-primary ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
   {{ form.province }}
   {% if form.province.errors %}
     <div class="invalid-feedback d-block">
@@ -27,6 +28,22 @@
       {{ form.province.errors|join:'<br>' }}
     </div>
   {% endif %}
+</div>
+
+<div class="modal fade" id="provinceModal" tabindex="-1" role="dialog" aria-labelledby="provinceModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="provinceModalLabel">Agregar Provincia</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="provinceModalContent">
+
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock form %}
