solved province modal in location ok and refactoring wallports

--- a/core/sh/templates/suply/create.html
+++ b/core/sh/templates/suply/create.html
@@ -72,6 +72,7 @@
 {% endblock form %}
 
 {% block form_scripts %}
+  <script src="{% static 'lib/adminlte_3.2.0/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'js/filters.js'%}"></script>
   <script src="{% static 'suply/js/form.js' %}"></script>
 {% endblock form_scripts %}
