--- a/templates/body.html
+++ b/templates/body.html
@@ -1,4 +1,5 @@
 {% extends 'home.html' %}
+{% load static %}
 
 {% block body %}
   <!-- Site wrapper -->
@@ -45,5 +46,6 @@
 
 
   {% block js %}
+
   {% endblock js %}
 {% endblock body %}
