--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="{% static 'lib/fontawesome_6.5.2/css/all.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <!-- Jquery -->
-  <script src="{% static 'lib/adminlte_3.2.0/plugins/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'lib/jquery_3.7.1/jquery-3.7.1.min.js' %}"></script>
   <!-- Jquery Confirm 3.3.4 -->
   <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}">
@@ -42,7 +41,7 @@
   <!-- Js Functions-->
   <script src="{% static 'js/functions.js' %}"></script>
   <!-- Bootstrap -->
-  <script src="{% static '/static/lib/adminlte_3.2.0/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'lib/adminlte_3.2.0/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   {% block extra_js %}
 
   {% endblock extra_js %}
