--- a/core/sh/templates/location/create.html
+++ b/core/sh/templates/location/create.html
@@ -1,4 +1,5 @@
 {% extends 'form.html' %}
+{% load widget_tweaks %}
 
 {% load static %}
 {% block extra_refs %}
@@ -12,7 +13,7 @@
 {% block form %}
 <div class="form-group">
     <label for="province">Provincia: </label>
-    <button type="button" class="btn btn-sm btn-outline-primary ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
+    <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
   {{ form.province }}
   {% if form.province.errors %}
     <div class="invalid-feedback d-block">
@@ -30,24 +31,52 @@
   {% endif %}
 </div>
 
-<div class="modal fade" id="provinceModal" tabindex="-1" role="dialog" aria-labelledby="provinceModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="provinceModalLabel">Agregar Provincia</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="provinceModalContent">
-
-      </div>
-    </div>
-  </div>
-</div>
-
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'location/js/form.js' %}"></script>
+
 {% endblock form_scripts %}
+
+{% block extra_js %}
+<script src="{% static 'location/js/form.js' %}"></script>
+{% endblock extra_js %}
+
+{% block modals %}
+<!-- Modal -->
+<div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <form method="post" action="{%url 'sh:province_add'%}" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Agregar una Provincia</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <input name="action" type="hidden" value="add">
+            {% csrf_token %}
+            {% for field  in province_add.visible_fields  %}
+            <div class="form-group">
+              <label for="{{ field.name }}">{{ field.label }}</label>
+              {{ field }}
+              {% if field.errors %}
+                <div class="invalid-feedback d-block">
+                  {{ field.errors|join:'<br>' }}
+                </div>
+              {% endif %}
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+          <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+{% endblock modals %}
